@@ -3,6 +3,8 @@ package ph.cdo.backend.service.impl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
+import ph.cdo.backend.dto.TransactionDTO;
+import ph.cdo.backend.dto.mapper.TransactionDTOMapper;
 import ph.cdo.backend.entity.Transaction;
 import ph.cdo.backend.enums.TransactionType;
 import ph.cdo.backend.entity.user.Client;
@@ -23,25 +25,28 @@ import java.util.stream.Collectors;
 public class TransactionServiceImpl implements TransactionService {
     private final TransactionRepository transactionRepository;
 
+    private final TransactionDTOMapper transactionDTOMapper;
+
     @Qualifier("ClientRepository")
     private final ClientRepository clientRepository;
 
 
     @Autowired
-    public TransactionServiceImpl(TransactionRepository transactionRepository, ClientRepository clientRepository) {
+    public TransactionServiceImpl(TransactionRepository transactionRepository, TransactionDTOMapper transactionDTOMapper, ClientRepository clientRepository) {
         this.transactionRepository = transactionRepository;
+        this.transactionDTOMapper = transactionDTOMapper;
         this.clientRepository = clientRepository;
     }
 
     @Override
-    public List<Transaction> findAllByClientID(Long id) throws EntityDoesNotExistsException, EmptyListException {
+    public List<TransactionDTO> findAllByClientID(Long id) throws EntityDoesNotExistsException, EmptyListException {
         Client client = clientRepository.findById(id)
                 .orElseThrow(()-> new EntityDoesNotExistsException(id));
 
         var list =  findAll()
                 .stream()
-                .filter(t -> t.getClient().equals(client))
-                .collect(Collectors.toList());
+                .filter(t -> Objects.equals(t.id(), client.getId()))
+                .toList();
         if(list.size() == 0)
             throw new EmptyListException("List of Transactions by Client");
         return list;
@@ -49,12 +54,14 @@ public class TransactionServiceImpl implements TransactionService {
     }
 
     @Override
-    public List<Transaction> findAll() {
-        return transactionRepository.findAll();
+    public List<TransactionDTO> findAll() {
+        return transactionRepository.findAll().stream()
+                .map(transactionDTOMapper)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Transaction> findByMonth(int month, int year) throws EmptyListException, InvalidValueException{
+    public List<TransactionDTO> findByMonth(int month, int year) throws EmptyListException, InvalidValueException{
         if(month >= 13 || month <= 0 || year <= 0)
             throw new InvalidValueException(month, year);
 
@@ -62,7 +69,7 @@ public class TransactionServiceImpl implements TransactionService {
         var list =  findAll()
                 .stream()
                 .filter(t-> {
-                 LocalDate localDate = t.getCreateDate()
+                 LocalDate localDate = t.createDate()
                          .toInstant()
                          .atZone(ZoneId.systemDefault())
                          .toLocalDate();
@@ -77,11 +84,11 @@ public class TransactionServiceImpl implements TransactionService {
     }
 
     @Override
-    public List<Transaction> findByRangeAmount(double min, double max) throws InvalidValueException, EmptyListException{
+    public List<TransactionDTO> findByRangeAmount(double min, double max) throws InvalidValueException, EmptyListException{
         if(min > max || min <= 0 || max <= 0 )
             throw new InvalidValueException(min, max);
         var list = findAll().stream()
-                .filter(t-> (t.getValue().doubleValue() >= min && t.getValue().doubleValue() <= max))
+                .filter(t-> (t.value().doubleValue() >= min && t.value().doubleValue() <= max))
                 .toList();
         if(list.size() == 0)
             throw new EmptyListException("List of Transactions by Range Amount");
@@ -91,15 +98,15 @@ public class TransactionServiceImpl implements TransactionService {
     }
 
     @Override
-    public List<Transaction> findByRangeDate(Date startDate, Date endDate) throws InvalidValueException, EmptyListException{
+    public List<TransactionDTO> findByRangeDate(Date startDate, Date endDate) throws InvalidValueException, EmptyListException{
         if( startDate == null || endDate == null || startDate.after(endDate))
             throw new InvalidValueException(startDate, endDate);
         var list = findAll().stream()
                 .filter(t-> {
                     return
-                            (t.getCreateDate().after(startDate) || t.getCreateDate().compareTo(startDate) == 0)
+                            (t.createDate().after(startDate) || t.createDate().compareTo(startDate) == 0)
                             &&
-                                    (t.getCreateDate().before(endDate) || t.getCreateDate().compareTo(endDate) == 0);
+                                    (t.createDate().before(endDate) || t.createDate().compareTo(endDate) == 0);
                 })
                 .toList();
 
@@ -110,15 +117,15 @@ public class TransactionServiceImpl implements TransactionService {
     }
 
     @Override
-    public Transaction findByID(Long id) throws EntityDoesNotExistsException{
-        return transactionRepository.findById(id).
-                orElseThrow(()-> new EntityDoesNotExistsException(id));
+    public TransactionDTO findByID(Long id) throws EntityDoesNotExistsException{
+        return transactionDTOMapper.apply( transactionRepository.findById(id).
+                orElseThrow(()-> new EntityDoesNotExistsException(id)));
     }
 
     @Override
-    public List<Transaction> findByType(TransactionType transactionType) throws EmptyListException{
+    public List<TransactionDTO> findByType(TransactionType transactionType) throws EmptyListException{
         var list =  findAll().stream()
-                .filter(t-> t.getTransactionType().equals(transactionType))
+                .filter(t-> t.transactionType().equals(transactionType))
                 .toList();
         if(list.size() == 0)
             throw new EmptyListException("List of Transactions by Transaction type");
@@ -126,7 +133,7 @@ public class TransactionServiceImpl implements TransactionService {
     }
 
     @Override
-    public List<Transaction> sortedList(List<Transaction> list, Comparator<Transaction> comparator) {
+    public List<TransactionDTO> sortedList(List<TransactionDTO> list, Comparator<TransactionDTO> comparator) {
         var temp = new java.util.ArrayList<>(List.copyOf(list));
          temp.sort(comparator);
 
@@ -140,7 +147,7 @@ public class TransactionServiceImpl implements TransactionService {
             throw new InvalidValueException(id);
 
         // Check if the transaction exists
-        Transaction transaction = transactionRepository.findById(id)
+        Transaction transaction =  transactionRepository.findById(id)
                 .orElseThrow(() -> new EntityDoesNotExistsException(id));
 
         // Delete the transaction
